peut delete outil maintenant